[+] Papago API added (ing)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,6 +41,6 @@ textarea {
   font-size: medium;
 }
 
-#text-after-org {
+#text-after-google-org {
   backgroundImage: "https://images.g2crowd.com/uploads/product/image/large_detail/large_detail_1520365957/google-cloud-translation-api.png"
 }
