--- a/client/src/components/Input.css
+++ b/client/src/components/Input.css
@@ -1,4 +1,8 @@
-#text-after-org {
+#text-after-google-org {
   /* background-image: url('https://images.g2crowd.com/uploads/product/image/large_detail/large_detail_1520365957/google-cloud-translation-api.png'); */
   background-repeat: no-repeat;
+}
+
+h2 {
+  font-family: 'Open Sans Condensed', sans-serif;
 }
