[+] Papago API complted.

--- a/client/src/components/Input.css
+++ b/client/src/components/Input.css
@@ -6,3 +6,15 @@
 h2 {
   font-family: 'Open Sans Condensed', sans-serif;
 }
+
+#buttons {
+  margin: 5px;
+}
+
+button {
+  margin: 5px;
+}
+
+textarea {
+  margin: 10px;
+}
