--- a/client/src/components/Input.css
+++ b/client/src/components/Input.css
@@ -8,13 +8,21 @@ h2 {
 }
 
 #buttons {
-  margin: 5px;
+  /* margin: 5px; */
 }
 
-button {
-  margin: 5px;
+#btn-translate {
+  margin-top: 5px;
+  margin-right: 15px;
+  /* padding-right: 35px; */
+}
+
+#btn-clear {
+  margin-top: 5px;
+  margin-left: -5px;
 }
 
 textarea {
-  margin: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
