--- a/client/src/components/Input.css
+++ b/client/src/components/Input.css
@@ -36,13 +36,15 @@ textarea {
   border: 1px solid black;
 }
 
-.word-selected {
-  color: red;
+.notranslate {
+  border: 5px;
+  color: #d63031;
+  transition: color 0.5s ease-in-out;
 }
 
 #text-before-enh {
   width: 1000px;
-  background-color: #d2f3f7;
+  background-color: #c8f8f8;
   margin-top: 5px;
   margin-bottom: 5px;
 }
